install-usb-gui (0.2.14) UNRELEASED; urgency=low

  * trap umount_partition partition function to ensure used mointpoints are
    cleaned up in event of failure.
  * If using script from environment other than stock live-cd, the iso media
    can be provided by cd media, if mount of cd fails, prompt for cd to be
    insterted.

 -- Kel Modderman <kel@otaku42.de>  Fri, 04 Apr 2008 10:48:11 +1000

install-usb-gui (0.2.13) unstable; urgency=low

  * Have a go at adding cdrom* and dvd* as gtk file chooser filters
    for iso -> usb install option.

 -- Kel Modderman <kel@otaku42.de>  Tue, 01 Apr 2008 04:03:59 +1000

install-usb-gui (0.2.12) unstable; urgency=low

  * Shorten grub menu description.

 -- Kel Modderman <kel@otaku42.de>  Mon, 31 Mar 2008 16:53:29 +1000

install-usb-gui (0.2.11) unstable; urgency=low

  * Provide compatibility code for when udetrigger/settle is replaced with
    udevadm. Add refresh_block_devices() function to take care of refresh of
    device nodes.

 -- Kel Modderman <kel@otaku42.de>  Mon, 24 Mar 2008 16:44:51 +1000

install-usb-gui (0.2.10) unstable; urgency=low

  * install-usb-title.png changed for nyx

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 20 Mar 2008 21:26:06 +0100

install-usb-gui (0.2.9) unstable; urgency=low

  * fixed the way as booted_device and fll_booted_dir as gotten on the live CD

 -- Joaquim Boura <x-un-i@sidux.com>  Mon, 17 Mar 2008 21:54:39 +0100

install-usb-gui (0.2.8) unstable; urgency=low

  * fixed fr translation. thanks to alphad.
  * corrected the pt language files. Thanks to Rui Umbelino (VaMPiRiC_CRoW)

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 09 Mar 2008 17:36:42 +0100

install-usb-gui (0.2.7) unstable; urgency=low

  * on live dont use /fll directly but get that directory from the default
    mountpoint.

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 04 Mar 2008 07:39:19 +0100

install-usb-gui (0.2.6) unstable; urgency=low

  * translation by muchan
