@@ -133,10 +133,13 @@ IFS=$' \t\n'
 # ==============================================================
 # 		start the installation
 # ==============================================================
-if [ "$FLL_DISTRO_MODE" = live ]; then
+if [ -f "$filechooserbutton_iso" ] || [ -b "$filechooserbutton_iso" ]; then
+	RUN_SH="$INSTALL_FROMISO_IN_USB -D $combobox_device -I $filechooserbutton_iso ${cheat}"
+elif [ "$FLL_DISTRO_MODE" = live ]; then
 	RUN_SH="$INSTALL_FROMISO_IN_USB -D $combobox_device ${cheat}"
 else
-	RUN_SH="$INSTALL_FROMISO_IN_USB -D $combobox_device -I $filechooserbutton_iso ${cheat}"
+	printf "Error with Mode of operation\n";
+	exit 1
 fi
 
 printf "$RUN_SH\n"
