@@ -128,8 +128,9 @@ on_button_install_accepted_clicked(GtkButton *button,
 	}
 	g_print("%s\n", entry_cheat_result);
 
-	if( strncmp( getenv("FLL_DISTRO_MODE"), "live", 4 ) != 0 ) {
-		// installed mode
+	if( strncmp( getenv("FLL_DISTRO_MODE"), "live", 4 ) != 0  || \
+	    strncmp( getenv("CHEATCODE_TORAM"), "0", 1 ) != 0 ) {
+		// installed mode or toram mode
 		g_print("%s\n", file_iso);
 	}
 
